--- a/app/src/main/res/layout/journal_non_edit_entry.xml
+++ b/app/src/main/res/layout/journal_non_edit_entry.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/edit_page_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
